{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 479,
  "lineage": "126a08b6-8384-ed9b-53d4-0f60af258768",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SQLserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d39db4976f3fce89",
            "arn": "arn:aws:ec2:ap-south-1:949472447553:instance/i-01120c9ccaf3e00d6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01120c9ccaf3e00d6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0643a2b95079cb3bc",
            "private_dns": "ip-192-168-1-180.ap-south-1.compute.internal",
            "private_ip": "192.168.1.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f942e036bb4f73bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a5a012a349bc7316"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018ec6a07ec63eaee",
            "tags": {
              "Name": "SQLserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5a012a349bc7316"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.AllowSQLandSSH",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc",
            "tls_private_key.createkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005956c5f0f757d37",
            "arn": "arn:aws:ec2:ap-south-1:949472447553:instance/i-03f9524c05e515fcb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f9524c05e515fcb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c971840d3a39743",
            "private_dns": "ip-192-168-0-236.ap-south-1.compute.internal",
            "private_ip": "192.168.0.236",
            "public_ip": "13.127.119.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0667dd0b58319de3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08e6a8559af1f4f1c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07631e5f5d8a6ff94",
            "tags": {
              "Name": "Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e6a8559af1f4f1c"
            ]
          },
          "dependencies": [
            "aws_instance.SQLserver",
            "aws_key_pair.generated_key",
            "aws_security_group.AllowSQLandSSH",
            "aws_security_group.AllowWebServicesAndSSH",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc",
            "tls_private_key.createkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949472447553:internet-gateway/igw-0b8ad4bf7b2178561",
            "id": "igw-0b8ad4bf7b2178561",
            "owner_id": "949472447553",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-03dfb0aa4d1d91ffe"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6f0eceaedf544d5",
            "owner_id": "949472447553",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8ad4bf7b2178561",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw_route"
            },
            "vpc_id": "vpc-03dfb0aa4d1d91ffe"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088d12834a2df4876",
            "route_table_id": "rtb-0a6f0eceaedf544d5",
            "subnet_id": "subnet-07631e5f5d8a6ff94"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.igw_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AllowSQLandSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949472447553:security-group/sg-0a5a012a349bc7316",
            "description": "AllowSQLandSSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5a012a349bc7316",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow SQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AllowSQLandSSH",
            "name_prefix": null,
            "owner_id": "949472447553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AllowSQLandSSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dfb0aa4d1d91ffe"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AllowWebServicesAndSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949472447553:security-group/sg-08e6a8559af1f4f1c",
            "description": "Allow webservices and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e6a8559af1f4f1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AllowWebServicesAndSSH",
            "name_prefix": null,
            "owner_id": "949472447553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AllowWebServicesAndSSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dfb0aa4d1d91ffe"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949472447553:subnet/subnet-018ec6a07ec63eaee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-018ec6a07ec63eaee",
            "map_public_ip_on_launch": false,
            "owner_id": "949472447553",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-03dfb0aa4d1d91ffe"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949472447553:subnet/subnet-07631e5f5d8a6ff94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-07631e5f5d8a6ff94",
            "map_public_ip_on_launch": false,
            "owner_id": "949472447553",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-03dfb0aa4d1d91ffe"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949472447553:vpc/vpc-03dfb0aa4d1d91ffe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09fbfb5b87863ffa4",
            "default_route_table_id": "rtb-0e0f386bf313f0d54",
            "default_security_group_id": "sg-0f25e98d21383439e",
            "dhcp_options_id": "dopt-9315eff8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03dfb0aa4d1d91ffe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e0f386bf313f0d54",
            "owner_id": "949472447553",
            "tags": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}